--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "@components/*": ["src/components/*"],
       "@js/*": ["src/js/*"]
     },
+    "ignoreDeprecations": "6.0",
     "incremental": true,
     "skipLibCheck": true
   }
