--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "astro-business-template",
+	"name": "astro-starter",
 	"type": "module",
 	"version": "1.0.0",
 	"description": "A modern Astro template for business websites with CMS integration",
@@ -13,6 +13,24 @@
 		"format": "prettier --write .",
 		"clean": "rm -rf dist .astro"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/sethpulsipher/astro-starter.git"
+	},
+	"keywords": [
+		"astro",
+		"business",
+		"template",
+		"cms",
+		"seo",
+		"responsive"
+	],
+	"author": "Seth Pulsipher",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/sethpulsipher/astro-starter/issues"
+	},
+	"homepage": "https://github.com/sethpulsipher/astro-starter#readme",
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.3.1",
@@ -26,15 +44,5 @@
 	"devDependencies": {
 		"prettier": "^3.0.0",
 		"prettier-plugin-astro": "^0.12.0"
-	},
-	"keywords": [
-		"astro",
-		"business",
-		"template",
-		"cms",
-		"seo",
-		"responsive"
-	],
-	"author": "Your Name",
-	"license": "MIT"
+	}
 }
