--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"astro-icon": "^1.1.1",
 		"autoprefixer": "^10.4.20",
 		"less": "^4.2.0",
+		"sharp": "^0.34.4",
 		"typescript": "^5.6.3"
 	},
 	"devDependencies": {
