--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"seo",
 		"responsive"
 	],
-	"author": "Seth Pulsipher",
+	"author": "https://github.com/sethpulsipher",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/sethpulsipher/astro-starter/issues"
