--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,11 @@
 [[plugins]]
   # Installs the Lighthouse Build Plugin for all deploy contexts
   package = "@netlify/plugin-lighthouse"
+
+[[plugins]]
+package = "netlify-plugin-cache"
+  [plugins.inputs]
+  paths = [
+    "node_modules/.astro", # Processed images from Astro
+    ".astro"
+  ]
