--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,6 @@
 package = "netlify-plugin-cache"
   [plugins.inputs]
   paths = [
-    "node_modules/.astro", # Processed images from Astro
-    ".astro"
+    "node_modules/.astro",  # Cache astro node modules to speed up subsequent installs
+    ".astro"                # Cache Astro's internal cache directory
   ]
