--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"typescript": "^5.6.3"
 	},
 	"devDependencies": {
+		"netlify-plugin-cache": "^1.0.3",
 		"prettier": "^3.0.0",
 		"prettier-plugin-astro": "^0.12.0"
 	}
