--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.3.1",
+		"@iconify-json/mdi": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.13",
 		"astro": "^5.7.12",
 		"astro-icon": "^1.1.1",
