--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@data/*": ["src/data/*"],
       "@styles/*": ["src/styles/*"],
       "@components/*": ["src/components/*"],
+      "@sections/*": ["src/components/sections/*"],
       "@js/*": ["src/js/*"]
     },
     "ignoreDeprecations": "6.0",
